fixed styling bug to align all center.

--- a/css/app.css
+++ b/css/app.css
@@ -23,8 +23,13 @@ body{
 .container{
   display: flex;
   justiify-content: center;
-  align-itmems: center;
+  align-items: center;
   flex-direction: column;
+}
+
+h1{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 }
 
 /*//score panel styles*/
